--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,14 +1,15 @@
 footer {
+  
   color: rgb(225, 225, 225);
   text-shadow: rgb(0, 0, 0) 1px 1px 2px;
   font-family: Helvetica, sans-serif;
   font-weight: lighter;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-  left: 0;
-  right: 0;
+  padding-block: 2rem;
+  margin-top: -20px;
+  left: 0pt;
+  bottom: 0pt;
   width: 100%;
-  position: relative;
-  height: auto;
+  position: fixed;
+  height: 5rem;
   text-align: center;
 }
