--- a/src/components/SearchFeed/SearchFeed.css
+++ b/src/components/SearchFeed/SearchFeed.css
@@ -1,22 +1,34 @@
 .search-page {
-  padding-left: auto;
-  margin-left: 5%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+.search-top-part {
+  justify-content: center;
+  height: fit-content;
+}
+.search-bottom-part {
+  margin: 0;
+  justify-content: center;
 }
 .search-title {
   width: 100%;
   text-align: left;
   margin: auto;
   padding: auto;
+  font-variant: small-caps;
+  font-size: large;
 }
 .search-form-container {
   display: inline;
   line-height: 20px;
   font-size: 22px;
-  text-align: left;
+  text-align: center;
 }
 .search-form {
   line-height: 20px;
-  padding-left: 1.5px;
+  padding-left: 2px;
   border-radius: 1px;
   border-style: hidden;
   margin-bottom: 1px;
@@ -36,7 +48,7 @@
   color: white;
 }
 .search-feed {
-  max-width: 70%;
+  max-width: 100%;
   display: grid;
   place-content: left;
   text-align: left;
@@ -47,6 +59,21 @@
   margin: 1rem;
   padding: 1rem;
   grid-auto-flow: row;
+}
+@media screen and (max-width: 1300px) {
+  .search-feed {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media screen and (max-width: 1000px) {
+  .search-feed {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media screen and (max-width: 700px) {
+  .search-feed {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 .item {
   border: rgb(41, 51, 60);
@@ -103,10 +130,29 @@
   font-kerning: none;
   font-size: x-large;
   text-align: center;
-  opacity: 70%;
+  opacity: 60%;
   width: 320px;
   padding: 4px;
   margin-bottom: 2px;
+  border-width: 2px;
+  border-style: none;
+  color: #4682b4;
+  border-color: #4682b4;
+  border-bottom-left-radius: 28px;
+  border-top-right-radius: 10px;
+  background: linear-gradient(to bottom right, lightgrey, grey);
+}
+.com-title {
+  font-variant-caps: titling-caps;
+  text-shadow: rgb(202, 154, 105) 1px 1px 3px;
+  text-align: left;
+  font-kerning: none;
+  font-size: x-large;
+  text-align: center;
+  opacity: 60%;
+  width: auto;
+  padding: 4px;
+  margin: 2px;
   border-width: 2px;
   border-style: none;
   color: #4682b4;
