--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,7 +3,7 @@ footer {
   color: rgb(225, 225, 225);
   text-shadow: rgb(0, 0, 0) 1px 1px 2px;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-weight: 700;
+  font-weight: 400;
   font-size: medium;
   padding-block: 2rem;
   margin-top: -20px;
@@ -13,4 +13,6 @@ footer {
   position: fixed;
   height: 5rem;
   text-align: center;
+  opacity: .97;
+  background: radial-gradient(black, transparent);
 }
